test/errors/const5.ls

#OUTPUT
#Syntax Error: Constants can only be literal values.
# -> [10] const int myconst = x
#
#END

#RET 0

const int myconst = x

extern func printf(s:str, ...)

func main -> int
    return 0
end
